

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-May-2010 Christophe Demko
 # Ensure that there exists at least one style for a template
 # Ensure that there exists only one default template style

12-May-2010 Jean-Marie Simonet
# Corrected com_redirect component_id in jos_menu table

12-May-2010 Andrew Eddie
 ^ Set Beez2 as the default template (awesome work by Angie Radtke).
 ^ Set AUTO_INCREMENT on jos_extensions table to start at 10000, allowing for more core plugins to be added at a later date.

11-May-2010 Jean-Marie Simonet
^ Correcting extension/example xml plugin
^ Hathor's update [Andrea Tarr]

11-May-2010 Christophe Demko
 # Fix Pb saving editors-xtd group plugins
 + Add default mini buttons on styles view
 # Fix buttons option for editor form field
 # Fix [#20217] For plugins
 # Fix [#20217] Edit Module +Session Timeout and Re-Login Error
 ^ Enhancing the menu items view
 # Fix [#20260] Menu items list missing the "Set Default" toolbar icon.
 # Fix [#20327] Contact fatal error

10-May-2010 Jean-Marie Simonet
+ Adding new user admin approval registration (Thanks Airton Torres)
# Enabling editors-xtd buttons in com_content
^ Hathor's views (20384]
^ Hathor's mod_status params [20385]
$ Adding missing string

09-May-2010 Ron Severdia
# BlueStork UI fixes
# CSS cleanup
# Language fixes
+ New icons

10-May-2010 Christophe Demko
 + Reinsert mod_languages and plg_systemlanguage filter extension
 # Fix [#20388] • Superuser admin/password not recognized when in offline.php
 # Fix bug in libraries/joomla/form/fields/imagelist.php
 ^ Change slightly the manage view on hathor template
 + Add language filter on some hathor views

09-May-2010 Hannes Papenberg