@@ -25,6 +25,7 @@ TPL_BEEZ2_FONTSIZE="Fontsize"
 TPL_BEEZ2_INCREASE_SIZE="Increase size"
 TPL_BEEZ2_JUMP_TO_INFO="Jump to additional information"
 TPL_BEEZ2_JUMP_TO_NAV="Jump to main navigation and login"
+TPL_BEEZ2_LOGO="Logo Beez"
 TPL_BEEZ2_NAVIGATION="Navigation"
 TPL_BEEZ2_NAV_VIEW_SEARCH="Nav view search"
 TPL_BEEZ2_OPTION_AFTER_CONTENT="after content"
